# Haskell-Step-by-Step-Evaluator

./: CMakeLists.txt  ExpressionElement.cpp  ExpressionElement.h  ExpressionMask.cpp  ExpressionMask.h  HaskellFunction.h  HaskellModel.cpp  HaskellModel.h  main.cpp
CommandController/: CommandController.cpp  CommandController.h  ControllerCommand.h
Exception/: CustomException.h  IncorrectTokenException.h
HAST/: HastFunctionCallNode.cpp  HastFunctionCallNode.h  HastFunctionNode.cpp  HastFunctionNode.h  HastMaskNode.cpp  HastMaskNode.h  HastNode.cpp  HastNode.h  HastNodeFactory.cpp  HastNodeFactory.h  HastOperatorCallNode.cpp  HastOperatorCallNode.h  HastOperatorNode.cpp  HastOperatorNode.h  HastPrinter.h
HAST/Additional/: FunctionArity.cpp  FunctionArity.h  HastNodeFactory.cpp  HastNodeFactory.h  HastPrinter.cpp  HastPrinter.h
Lexer/: Lexer.cpp  Lexer.h  TokenTree.cpp  TokenTree.h  expr_grammar.h  expression_tree.cpp  expression_tree.h  main.cpp
Lines/: CompressedLine.cpp  CompressedLine.h  HaskellFileParser.cpp  HaskellFileParser.h  IndentedLine.cpp  IndentedLine.h  LineParser.cpp  LineParser.h  LineStatement.cpp  LineStatement.h  Statement.cpp  Statement.h
Model/: HaskellFunction.cpp  HaskellFunction.h  HaskellModel.cpp  HaskellModel.h
Model/HaskellFunction/: Body.cpp  Body.h  Function.cpp  Function.h  Guard.cpp  Guard.h  Mask.cpp  Mask.h  MaskTemplate.cpp  MaskTemplate.h
Parsing/: PartiallyParsedString.cpp  PartiallyParsedString.h  parsing.cpp  parsing.h
deprecated/: dataType.h
input/: Prelude.hs  file1.hs  file2.hs  file3.hs  formats.txt
